web-app/css/dashboard.css
.v-center {
    display:table !important;
    height:80px;
}

.v-center-content {
    display:table-cell;
    vertical-align:middle;
}

.page-header-content {
    display:table-cell;
    vertical-align:middle;
}

#nav-site > .navbar-inner {
    margin-bottom: 0;
}

footer {
    margin-top: 0;
}

#main-content {
    padding: 0;
    margin: 0;
    background-color: #757042;
}

.dashboard #page-header {
    background:#4c3b2f url(../images/skin/bg_getinvolved.jpg) center center no-repeat;
    color: white;
    min-height: 80px;
}

.dashboard .page-header-content {
    display:table-cell;
    vertical-align:middle;
}

.dashboard .page-header-content.button-group a {
    color: #000000 !important;
}

.dashboard .page-header-content.left {
    padding-left: 2em;
}

.dashboard ul.breadcrumb {
    background-color: transparent;
    margin-bottom: 0.5em;
}

.dashboard ul.breadcrumb li.active {
    color: white;
    font-weight: normal;
}

.dashboard #page-header a {
    color: white;
}

.dashboard #page-header button {
    margin-right: 20px;
}

.vertically-aligned {
    position: relative;
    top: 50%;
}

#floatContainer {
    padding-top: 2em;
}

#floatContainer [class*="span"] {
    margin-left: 20px;
}

/* Start Dashboard Panels */
.panel {
    padding: 15px;
    margin-bottom: 20px;
    background-color: #ffffff;
    border: 1px solid #dddddd;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    min-height: 300px;
}

.panel-heading {
    padding: 10px 15px;
    margin: -15px -15px 15px;
    font-size: 17.5px;
    font-weight: 500;
    background-color: #f5f5f5;
    border-bottom: 1px solid #dddddd;
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
    cursor:move;
}

.panel-title i {
    cursor: pointer;
}

.panel-footer {
    padding: 10px 15px;
    margin: 15px -15px -15px;
    background-color: #f5f5f5;
    border-top: 1px solid #dddddd;
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
}

.panel-primary {
    border-color: #428bca;
}

.panel-primary .panel-heading {
    color: #ffffff;
    background-color: #428bca;
    border-color: #428bca;
}

.panel-success {
    border-color: #d6e9c6;
}

.panel-success .panel-heading {
    color: #468847;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.panel-warning {
    border-color: #fbeed5;
}

.panel-warning .panel-heading {
    color: #c09853;
    background-color: #fcf8e3;
    border-color: #fbeed5;
}

.panel-danger {
    border-color: #eed3d7;
}

.panel-danger .panel-heading {
    color: #b94a48;
    background-color: #f2dede;
    border-color: #eed3d7;
}

.panel-info {
    border-color: #bce8f1;
}

.panel-info .panel-heading {
    color: #3a87ad;
    background-color: #d9edf7;
    border-color: #bce8f1;
}

.panel-collapsed .panel-body {display:none;}
.panel.panel-collapsed {padding-bottom:0; border-bottom:0;}

/* End Dashboard Panels */

/* Start Specific Panel Content */

.initiallyHidden {
    display: none;
}

#totalRecords {
    color: #666;
    font-family:"Arial Narrow", Arial, Helvetica,sans-serif;
    font-size: 3em;
    font-weight: bold;
    padding: 1em 10px 15px 0;
    text-align: center;
}

.paragraph {
    padding: 0 1em;
}

.p1-5 {
    font-size: 1.5em;
}

#records-topic .third-paragraph {
    padding: 1.2em 1em 0;
}

#collectionsByCategory {
    text-align: center;
    height: 230px;
    width: 100%;
    padding-top: 2em;
}

#decadeChart {
    text-align: center;
    height: 230px;
    width: 100%;
}

#collectionsByCategory > img, #stateChart > img, #decadeChart img  {
    position: relative;
    top: 45%;
    margin: auto;
}

#collectionsByCategory > div {
    margin: auto;
}

#decadeChart > div {
    margin: auto !important;
}

#stateChart {
    text-align: center;
    height: 220px;
    width: 100%;
    margin-left: -10px;
    padding-top: 1.8em;
}

.click-thru td:nth-child(odd):hover {
    background-color: #e7e9f9;
    cursor: pointer;
}

#bhl-topic .panel-body > div {
    margin-bottom: 1em;
}


/* End Specific Panel Content */

